[tool.poetry]
name = "pico_zense_cython_wrapper"
version = "0.1.0"
description = ""
authors = ["yuki-inaho <yoshikawa@inaho.co>"]

[tool.poetry.dependencies]
python = "^2.7"
toml = "^0.10.1"
opencv-python = "4.2.0.32"
cython = "^0.29.19"
click = "^7.1.2"
pkgconfig = "^1.5.1"
numpy = "^1.16.6"
cvui = "2.7b1"
psutil = "^5.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
