[tool.poetry]
name = "pico_zense_cython_wrapper_cpu_check"
version = "0.1.0"
description = ""
authors = ["yuki-inaho <yoshikawa@inaho.co>"]

[tool.poetry.dependencies]
python = "^2.7"
click = "7.1.2"
cvui = "2.7b1"
cython = "0.29.19"
numpy = "1.16.6"
opencv-python = "4.2.0.32"
pkgconfig = "1.5.1"
toml = "0.10.1"
pathlib = "1.0.1"
pyflann = "1.6.14"
matplotlib = "2.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
